# numeric-cpp

./: .gitpod.yml  CMakeLists.txt  COPYING.md  Dockerfile  FILESTRUCTURE.md  LICENSE.md  README.md  TODO.md
.github/workflows/: ci.yml  docker.yml
app/: CMakeLists.txt  numeric_app.cpp
include/numeric/: numeric.hpp
tests/: CMakeLists.txt  numeric_t.cpp
